--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,19 +7,29 @@
 body {
   font-family: "Open Sans", Arial, sans-serif;
   margin: 0;
-  justify-content: center; /* Centers content horizontally */
+  justify-content: center;
+  /* Centers content horizontally */
   min-width: 320px;
   min-height: 100vh;
+
+}
+
+.root {
+  height: 100vh;
 }
 
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
+
+
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
@@ -53,6 +63,7 @@ body {
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
   }
+
   .dark {
     --background: 20 14.3% 4.1%;
     --foreground: 60 9.1% 97.8%;
@@ -85,6 +96,7 @@ body {
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
